# krafna

./: .deepsource.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  publish.yml  release.yml
.homebrew/: krafna.rb  update-sha.sh
benches/: example.md  example_with_query.md  query_benchmark.rs
src/: lib.rs  main.rs  query_parser.rs
src/libs/: data_fetcher.rs  executor.rs  mod.rs  parser.rs  peekable_deque.rs  query_parser.rs  serializer.rs
src/libs/data_fetcher/: markdown_fetcher.rs  mod.rs  pod.rs
tests/: parser_test.rs  query_parser_test.rs
