[package]
name = "krafna"
version = "0.1.0"
edition = "2021"

[lib]
name = "krafna"
path = "src/lib.rs"

[[bin]]
name = "krafna"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = 3

[dependencies]
gray_matter = "0.2"
walkdir = "2.4"
rayon = "1.8"
hashbrown = "0.15.2"
phf = { version = "0.11", features = ["macros"] }
shellexpand = "3.1"
chrono = "0.4.39"
regex = "1.11.1"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
