[package]
name = "krafna"
version = "0.5.1"
authors = ["Joel Kunst <7sedam7@gmail.com>"]
description = "Krafna is a terminal-based alternative to Obsidian's Dataview plugin, allowing you to query your Markdown files using standard SQL syntax."
license = "MIT"
repository = "https://github.com/7sedam7/krafna"
documentation = "https://docs.rs/krafna"
homepage = "https://github.com/7sedam7/krafna"
readme = "README.md"
categories = ["command-line-utilities", "text-processing", "data-structures"]
keywords = ["cli", "obsidian", "markdown", "sql"]
edition = "2021"

[lib]
name = "krafna"
path = "src/lib.rs"

[[bin]]
name = "krafna"
path = "src/main.rs"

[profile.release]
# debug = true
lto = true
opt-level = 3

[profile.bench]
debug = true

[dependencies]
gray_matter = "0.2.8"
walkdir = "2.5"
rayon = "1.10.0"
hashbrown = "0.15.2"
phf = { version = "0.11.3", features = ["macros"] }
shellexpand = "3.1"
chrono = "0.4.39"
regex = "1.11.1"
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.3"
lru = "0.13.0"
pulldown-cmark = "0.13.0"
bincode = "1.3.3"
directories = "6.0.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "query_benchmark"
harness = false
